// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell custom class 1`] = `
<td
  className="table-cell-view foo"
>
  
</td>
`;

exports[`Cell edit input custom class 1`] = `
<td
  className="table-cell-view"
>
  
</td>
`;

exports[`Cell edit mode enabled css class 1`] = `
<td
  className="table-cell-view"
>
  
</td>
`;

exports[`Cell edit mode with the row not selected 1`] = `
<td
  className="table-cell-view"
>
  
</td>
`;

exports[`Cell has a color picker 1`] = `
<td
  className="table-cell-view"
>
  
</td>
`;

exports[`Cell has a datetime data type 1`] = `
<td
  className="table-cell-view"
>
  
</td>
`;

exports[`Cell has a file dropzone 1`] = `
<td
  className="table-cell-view"
>
  
</td>
`;

exports[`Cell has a list of options 1`] = `
<td
  className="table-cell-view"
>
  
</td>
`;

exports[`Cell has a lookup 1`] = `
<td
  className="table-cell-view"
>
  
</td>
`;

exports[`Cell has a value 1`] = `
<td
  className="table-cell-view"
  title="foo"
>
  foo
</td>
`;

exports[`Cell has an async filter 1`] = `
<td
  className="table-cell-view"
>
  
</td>
`;

exports[`Cell image has a delete button 1`] = `
<td
  className="table-cell-view"
  title="/src"
>
  /src
</td>
`;

exports[`Cell is an editable input 1`] = `
<td
  className="table-cell-view"
>
  
</td>
`;

exports[`Cell multiline is true 1`] = `
<td
  className="table-cell-view"
>
  
</td>
`;

exports[`Cell no edit mode enabled class 1`] = `
<td
  className="table-cell-view"
>
  
</td>
`;

exports[`Cell that has an image 1`] = `
<td
  className="table-cell-view"
  title="/src"
>
  /src
</td>
`;

exports[`Cell update is false 1`] = `
<td
  className="table-cell-view"
>
  
</td>
`;

exports[`Cell with a value 1`] = `
<td
  className="table-cell-view"
  title="foo"
>
  foo
</td>
`;

exports[`Cell without a row selected 1`] = `
<td
  className="table-cell-view"
>
  
</td>
`;

exports[`Default render of cell 1`] = `
<td
  className="table-cell-view"
>
  
</td>
`;
